# c-demo

./: README.md
C/: CMakeLists.txt  main.c
CS61c/: CMakeLists.txt  main.c
C_quick_start/: CMakeLists.txt  main.c
dice_game/: CMakeLists.txt  main.c
draft/: int_test.cpp
sudoku/: CMakeLists.txt  main.c  puzzle.c  sudoku.h
test/: CMakeLists.txt  main.c
test2/: CMakeLists.txt  main.c
the game design of C  language/: CMakeLists.txt  main.c
the_game_programming_of_C/: CMakeLists.txt  function_prototype_set.h  main.c  support_utf8.c  temperature_convert.c
the_game_programming_of_C/C_quick_start/: rectangle_area.c  test.c
the_game_programming_of_C/Control_flow/: Fibonacci.c  arithmetic_progression.c  max_number.c  narcissistic_number_test.c  nine_nine_mul_table.c  piecewise_function.c  print_asterisk.c  select_month.c  swap_variable.c  triangle_area.c
the_game_programming_of_C/Pointer/: pointer.c
