cmake_minimum_required(VERSION 3.25)
project(the_game_programming_of_C C)

set(CMAKE_C_STANDARD 99)

add_executable(the_game_programming_of_C main.c temperature_convert.c function_prototype_set.h support_utf8.c C_quick_start/test.c C_quick_start/test.c C_quick_start/rectangle_area.c C_quick_start/rectangle_area.c Control_flow/triangle_area.c Control_flow/swap_variable.c Control_flow/max_number.c Control_flow/piecewise_function.c Control_flow/select_month.c Control_flow/arithmetic_progression.c Control_flow/print_asterisk.c Control_flow/Fibonacci.c Control_flow/nine_nine_mul_table.c Control_flow/narcissistic_number_test.c Pointer/pointer.c)
